# deepseek-testing-qa-data-analysis

./: .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: count.py  merge.py  merged_data.json  put_label.py  qaa.json  run.sh
src/Distill-Llama-70B-IQ2_XS-00001-of-00002/: 20250205_235640.txt  20250206_000142.txt  20250206_001704.txt  20250206_002206.txt  20250206_002537.txt  20250206_002905.txt  20250206_003326.txt  20250206_003846.txt  20250206_004358.txt  20250206_004809.txt  20250206_004941.txt  20250206_005349.txt  20250206_005731.txt  20250206_010040.txt  20250206_010413.txt  20250206_010832.txt  20250206_011230.txt  20250206_011902.txt  20250206_012228.txt  20250206_012916.txt  20250206_013302.txt  20250206_013948.txt  20250206_014336.txt  20250206_014641.txt  20250206_014905.txt  20250206_015241.txt  20250206_015634.txt  20250206_020044.txt  20250206_020317.txt  20250206_020729.txt  20250206_021025.txt  20250206_021419.txt  20250206_021857.txt  20250206_022325.txt  20250206_022717.txt  20250206_023214.txt  20250206_023747.txt  20250206_024158.txt  20250206_024542.txt  20250206_024941.txt  (+56 more)
src/Distill-Qwen-7B-Q2_K-00001-of-00001/: 20250201_000120.txt  20250201_001058.txt  20250201_002731.txt  20250201_004110.txt  20250201_005209.txt  20250201_010223.txt  20250201_011039.txt  20250201_012146.txt  20250201_014433.txt  20250201_015536.txt  20250201_020240.txt  20250201_021349.txt  20250201_022645.txt  20250201_023821.txt  20250201_024639.txt  20250201_025809.txt  20250201_031202.txt  (+82 more)
