[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
    "fastapi>=0.115.6",
    "hypercorn>=0.17.3",
    "uvicorn>=0.34.0",
    "transformers",
    "accelerate",
    "safetensors",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.3.1%2Bcu118-cp312-cp312-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.18.1%2Bcu118-cp312-cp312-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "poethepoet>=0.31.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
]

[tool.ruff]
target-version = "py312"
line-length = 119
select = ["ALL"]
ignore = [
    "ANN", "D", "TD", "DTZ", "COM", "EM", "FBT",
    "INP", "ERA", "E501", "N802", "N806", "S101",
    "S311", "S324", "RUF001", "RUF002", "RUF003"
]
exclude = ["/workspace/src/libs"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
strict = true
plugins = [
  "numpy.typing.mypy_plugin"
]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
fmt = "ruff format ."
test = "pytest --cov=src/services -sv --disable-warnings tests/integration"
fmt-test = ["fmt", "test"]
fmt-test-lint = ["fmt", "lint", "test"]
